# turtletrackandfield

./: README.md
striker/: CMakeLists.txt  package.xml
striker/launch/: bowling_lane.launch
striker/models/alley_wall/: model.config  model.sdf
striker/models/bowling_ball/: model.config  model.sdf
striker/models/bowling_pin/: model.config  model.sdf
striker/scripts/: generate_launch.py  generate_world.py  genetic.py  reset.py  striker.py
striker/worlds/: bowling_lane.world  three_lane.world
